--- a/ImpactCalculateWebApplication/Views/Home/Index.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     }
 
 
-<div class="col-md-2 d-none d-md-block bg-light sidebar">
+@*<div class="col-md-2 d-none d-md-block bg-light sidebar">
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
         <span>Постоянные величины</span>
 
@@ -27,79 +27,89 @@
         <button type="submit" id="AddRow" name="buttonType" class="btn btn-light btn-sm">Добавить строку</button>
         <button type="submit" id="RemoveRow" name="buttonType" class="btn btn-light btn-sm">Удалить строку</button>
     </div>
-</div>
+</div>*@
 
-<div class="main-content">
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Исходные данные</h1>
-    </div>
-    <form action="/Home/Index" method="post">
-        <table id="table" class="table table-bordered table-responsive">
-            <thead class="sticky-header">
-                <tr>
-                    <th>Смены</th>
-                    <th>Расход воздуха, м3/ч</th>
-                    <th>Давление воздуха, мбар</th>
-                    <th>Температура подогрева воздуха, *C</th>
-                    <th>Температура отходящих газов, *C</th>
-                    <th>Вязкость, усл. ед.</th>
-                    <th>Температура расплава, *C</th>
-                    <th>Содержание CO, %</th>
-                    <th>Содержание CO2, %</th>
-                    <th>Содержание N2, %</th>
-                    <th>Содержание O2, %</th>
-                    <th>Id</th>
-                </tr>
-            </thead>
+    <section class="head py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light">Album example</h1>
+                <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+                <div class="px-3 mt-4 mb-">
+                    <button type="submit" id="AddRow" name="buttonType" class="row-configure-button btn btn-light btn-sm">Добавить строку</button>
+                    <button type="submit" id="RemoveRow" name="buttonType" class="row-configure-button btn btn-light btn-sm">Удалить строку</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="main-content bg-light">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+                <h1 class="h2">Исходные данные</h1>
+            </div>
+            <form action="/Home/Index" method="post" class="input-form">
+                <table id="table" class="table table-bordered table-responsive">
+                    <thead class="sticky-header">
+                        <tr>
+                            <th>Смены</th>
+                            <th>Расход воздуха, м3/ч</th>
+                            <th>Давление воздуха, мбар</th>
+                            <th>Температура подогрева воздуха, *C</th>
+                            <th>Температура отходящих газов, *C</th>
+                            <th>Вязкость, усл. ед.</th>
+                            <th>Температура расплава, *C</th>
+                            <th>Содержание CO, %</th>
+                            <th>Содержание CO2, %</th>
+                            <th>Содержание N2, %</th>
+                            <th>Содержание O2, %</th>
+                            <th>Id</th>
+                        </tr>
+                    </thead>
 
 
-            @{
-                <tr>
-                    <td rowspan="12">1</td>
+                    @{
+                       <td rowspan="13">1</td>
 
-                </tr>
+                        for (int i = 0; i < @Model.Count; i++)
+                        {
+                            <tr>
 
-
-                for (int i = 0; i < @Model.Count; i++)
-                {
-                    <tr>
-
-                        <td>
-                            <input class="form-control" name="[@i].Air_Spend" type="text" value=@Model[i].Air_Spend>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].Air_Pressure" type="text" value=@Model[i].Air_Pressure>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].Air_Temperature" type="text" value=@Model[i].Air_Temperature>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].Smoke_Temperature" type="text" value=@Model[i].Smoke_Temperature>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].Viscosity" type="text" value=@Model[i].Viscosity>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].Melt_Temperature" type="text" value=@Model[i].Melt_Temperature>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].CO_Percentage" type="text" value=@Model[i].CO_Percentage>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].CO2_Percentage" type="text" value=@Model[i].CO2_Percentage>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].N2_Percentage" type="text" value=@Model[i].N2_Percentage>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].O2_Percentage" type="text" value=@Model[i].O2_Percentage>
-                        </td>
-                        <td>
-                            <input class="form-control" name="[@i].ID" type="text" value=@Model[i].ID>
-                        </td>
-                    </tr>
-                }
-            }
+                                <td>
+                                    <input class="form-control" name="[@i].Air_Spend" type="text" value=@Model[i].Air_Spend>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].Air_Pressure" type="text" value=@Model[i].Air_Pressure>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].Air_Temperature" type="text" value=@Model[i].Air_Temperature>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].Smoke_Temperature" type="text" value=@Model[i].Smoke_Temperature>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].Viscosity" type="text" value=@Model[i].Viscosity>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].Melt_Temperature" type="text" value=@Model[i].Melt_Temperature>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].CO_Percentage" type="text" value=@Model[i].CO_Percentage>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].CO2_Percentage" type="text" value=@Model[i].CO2_Percentage>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].N2_Percentage" type="text" value=@Model[i].N2_Percentage>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].O2_Percentage" type="text" value=@Model[i].O2_Percentage>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].ID" type="text" value=@Model[i].ID>
+                                </td>
+                            </tr>
+                        }
+                    }
 
 
 
@@ -107,111 +117,107 @@
             <script>
             $(document).ready(function () {
 
-                let rowCount = $('table tr').length - 1;
-                let shiftCount = 1;
-                let shiftTime = 12;
+            let rowCount = $('table tr').length - 2;
+            let shiftCount = 1;
+            let shiftTime = 13;
+            console.log(rowCount);
+
+
+            // Добавление
+            $('#AddRow').on('click', function () {
+
+                @{
+                    var newInput = InputDataModel.GetDefaultData();
+                    newInput.ID = ++id;
+                    Model.Add(newInput);
+                }
+
+                rowCount++;
                 console.log(rowCount);
 
+                if (rowCount - shiftTime == 0) {
+                    shiftCount++;
 
-                // Добавление
-
-                $('#AddRow').on('click', function () {
-
-                    @{
-                        var newInput = InputDataModel.GetDefaultData();
-                        newInput.ID = ++id;
-                        Model.Add(newInput);
-                     }
-
-                                rowCount++;
-                                console.log(rowCount);
-
-                                if (rowCount % shiftTime == 1) {
-                                    shiftCount++;
-                                    console.log("shift : " + shiftCount);
-                        $('tbody').append(`<tr>
-                        <td class="text-center" rowspan="${shiftTime}">${shiftCount}</td>
-                        </tr>`);
-                    }
+                    rowCount = 1;
+                    console.log(rowCount, shiftTime);
+                    console.log("shift : " + shiftCount);
+                    $('tbody').append(`<td class="text-center" rowspan="${shiftTime}">${shiftCount}</td>`);
+                }
 
 
-                    $('tbody').append(`<tr>
+                $('tbody').append(`<tr>
 
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].Air_Spend" type="text" value=@Model[Model.Count - 1].Air_Spend>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].Air_Pressure" type="text" value=@Model[Model.Count - 1].Air_Pressure>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].Air_Temperature" type="text" value=@Model[Model.Count - 1].Air_Temperature>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].Smoke_Temperature" type="text" value=@Model[Model.Count - 1].Smoke_Temperature>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].Viscosity" type="text" value=@Model[Model.Count - 1].Viscosity>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].Melt_Temperature" type="text" value=@Model[Model.Count - 1].Melt_Temperature>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].CO_Percentage" type="text" value=@Model[Model.Count - 1].CO_Percentage>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].CO2_Percentage" type="text" value=@Model[Model.Count - 1].CO2_Percentage>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].N2_Percentage" type="text" value=@Model[Model.Count - 1].N2_Percentage>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].O2_Percentage" type="text" value=@Model[Model.Count - 1].O2_Percentage>
-</td>
-<td>
-<input class="form-control" name="[@(Model.Count - 1)].ID" type="text" value=@Model[Model.Count - 1].ID>
-</td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].Air_Spend" type="text" value=@Model[Model.Count - 1].Air_Spend>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].Air_Pressure" type="text" value=@Model[Model.Count - 1].Air_Pressure>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].Air_Temperature" type="text" value=@Model[Model.Count - 1].Air_Temperature>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].Smoke_Temperature" type="text" value=@Model[Model.Count - 1].Smoke_Temperature>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].Viscosity" type="text" value=@Model[Model.Count - 1].Viscosity>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].Melt_Temperature" type="text" value=@Model[Model.Count - 1].Melt_Temperature>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].CO_Percentage" type="text" value=@Model[Model.Count - 1].CO_Percentage>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].CO2_Percentage" type="text" value=@Model[Model.Count - 1].CO2_Percentage>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].N2_Percentage" type="text" value=@Model[Model.Count - 1].N2_Percentage>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].O2_Percentage" type="text" value=@Model[Model.Count - 1].O2_Percentage>
+                    </td>
+                    <td>
+                    <input class="form-control" name="[@(Model.Count - 1)].ID" type="text" value=@Model[Model.Count - 1].ID>
+                    </td>
 
+                </tr>`);
+
+            });
+
+
+            @*// Удаление
+
+            $('#RemoveRow').on('click', function () {
+
+                    if (rowCount > 2)
+                    {
+                        document.getElementsByTagName("tr")[rowCount].remove();
+
+                        //$('tbody').children('tr')
+                        if (rowCount % shiftTime == 1) {
+
+                    $('tbody').remove(`<tr>
+                    <td class="text-center" rowspan="${shiftTime}">${shiftCount}</td>
                     </tr>`);
 
-                });
+                shiftCount--;
+                }
 
+                rowCount--;
 
-                // Удаление
+                $(@{Model.RemoveAt(Model.Count - 1);})
 
-                $('#RemoveRow').on('click', function () {
+                }
 
-                        if (rowCount > 2)
-                        {
-                            document.getElementsByTagName("tr")[rowCount].remove();
+            });*@
 
-                            //$('tbody').children('tr')
-                            if (rowCount % shiftTime == 1) {
+        });
+                    </script>
 
-                        $('tbody').remove(`<tr>
-                        <td class="text-center" rowspan="${shiftTime}">${shiftCount}</td>
-                        </tr>`);
+                </table>
+                <button type="submit" id="Calculate" name="buttonType" class="btn btn-primary">Calculate</button>
 
-                    shiftCount--;
-                    }
-
-                    rowCount--;
-
-                    $(@{Model.RemoveAt(Model.Count - 1);})
-
-                    }
-
-                });
-
-
-
-                $("html,body").animate({
-                        scrollTop: $("#Calculate").offset().top
-                });
-            });
-            </script>
-
-        </table>
-        <button type="submit" id="Calculate" name="buttonType" class="btn btn-primary">Calculate</button>
-
-    </form>
-</div>
+            </form>
+        </div>        
+    </div>
