--- a/ImpactCalculateWebApplication/wwwroot/css/site.css
+++ b/ImpactCalculateWebApplication/wwwroot/css/site.css
@@ -58,10 +58,10 @@ html {
   min-height: 100%;
 }
 
-body {
+/*body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
-}
+}*/
 .footer {
   position: absolute;
   bottom: 0;
@@ -71,9 +71,9 @@ body {
 }
 
 /**/
-[role="main"] {
+/*[role="main"] {
     padding-top: 48px;
-}
+}*/
 
 .main-head {
     margin: 0 0 50px 0;
@@ -95,6 +95,16 @@ body {
     font-size: 1rem;
     background-color: rgba(0, 0, 0, .25);
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+}
+
+/**/ 
+.test {
+    height: 200px;
+}
+
+.table.overflow-y {
+    overflow-y: auto;
+    height: 400px;
 }
 
 
