--- a/ImpactCalculateWebApplication/Views/Home/Index.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
 @{ ViewData["Title"] = "Home Page";
     CocksModel cocksModel = new CocksModel();
     int id = IndexViewModel.LastID;
+
+    
     }
 
 
@@ -34,10 +36,12 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Album example</h1>
                 <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-                <div class="px-3 mt-4 mb-">
-                    <button type="submit" id="AddRow" name="buttonType" class="row-configure-button btn btn-light btn-sm">Добавить строку</button>
-                    <button type="submit" id="RemoveRow" name="buttonType" class="row-configure-button btn btn-light btn-sm">Удалить строку</button>
-                </div>
+                
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                    Насройка параметров
+                </button>
+             
             </div>
         </div>
     </section>
@@ -46,8 +50,36 @@
         <div class="container-fluid">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
                 <h1 class="h2">Исходные данные</h1>
+                <div class="ml-3 mr-auto">
+                    <button type="submit" id="AddRow" name="buttonType" class="row-configure-button btn btn-light btn-sm">Добавить строку</button>
+                    <button type="submit" id="RemoveRow" name="buttonType" class="row-configure-button btn btn-light btn-sm">Удалить строку</button>
+                </div>
             </div>
             <form action="/Home/Index" method="post" class="input-form">
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">Насройка параметров</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <label></label>
+                                <label for="идентификатор">Текст</label>
+                                <input id="L1" class="form-control" name="L1" type="text" value="">
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                                <button type="button" class="btn btn-primary">Сохранить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <table id="table" class="table table-bordered table-responsive">
                     <thead class="sticky-header">
                         <tr>
@@ -62,13 +94,28 @@
                             <th>Содержание CO2, %</th>
                             <th>Содержание N2, %</th>
                             <th>Содержание O2, %</th>
-                            <th>Id</th>
+
+                            <th>Габро, кг/ч</th>
+                            <th>Известняк, кг/ч</th>
+                            <th>Марганцовистый известняк, кг/ч</th>
+                            <th>Кокс, кг/ч</th>
+                            <th>Природный газ, кг/ч</th>
+
+                            <th>SiO<sub>2</sub>, %</th>
+                            <th>Al<sub>2</sub>O<sub>3</sub>, %</th>
+                            <th>CaO, %</th>
+                            <th>MgO, %</th>
+                            <th>FeO, %</th>
+
+                            <th>Расход воды на входе</th>
+                            <th>Расход воды на выходе</th>
+                            <th>Ср. темп. пара-водяной смеси</th>
                         </tr>
                     </thead>
 
 
                     @{
-                       <td rowspan="13">1</td>
+                        <td rowspan="13">1</td>
 
                         for (int i = 0; i < @Model.Count; i++)
                         {
@@ -90,7 +137,7 @@
                                     <input class="form-control" name="[@i].Viscosity" type="text" value=@Model[i].Viscosity>
                                 </td>
                                 <td>
-                                    <input class="form-control" name="[@i].Melt_Temperature" type="text" value=@Model[i].Melt_Temperature>
+                                    <input class="form-control" name="[@i].Melt_Temperature" type="text" value=@Model[i].Smelt_Temperature>
                                 </td>
                                 <td>
                                     <input class="form-control" name="[@i].CO_Percentage" type="text" value=@Model[i].CO_Percentage>
@@ -104,8 +151,53 @@
                                 <td>
                                     <input class="form-control" name="[@i].O2_Percentage" type="text" value=@Model[i].O2_Percentage>
                                 </td>
+
+                                @* РАСХОД МАТЕРИАЛОВ *@
+
                                 <td>
-                                    <input class="form-control" name="[@i].ID" type="text" value=@Model[i].ID>
+                                    <input class="form-control" name="[@i].Gabbro" type="text" value=@Model[i].Gabbro>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].Limestone" type="text" value=@Model[i].Limestone>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].M_Limestone" type="text" value=@Model[i].M_Limestone>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].Cocks" type="text" value=@Model[i].Cocks>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].Gas" type="text" value=@Model[i].Gas>
+                                </td>
+
+                                @* СОДЕРЖАНИЕ ОКСИДОЕ *@
+
+                                <td>
+                                    <input class="form-control" name="[@i].SiO2" type="text" value=@Model[i].SiO2>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].Al2O3" type="text" value=@Model[i].Al2O3>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].CaO" type="text" value=@Model[i].CaO>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].MgO" type="text" value=@Model[i].MgO>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].FeO" type="text" value=@Model[i].FeO>
+                                </td>
+
+                                @* ПАРАМЕТРЫ ОХЛАЖДАЮЩЕЙ ВОДЫ *@
+
+                                <td>
+                                    <input class="form-control" name="[@i].InputWaterWaste" type="text" value=@Model[i].InputWaterWaste>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].OutputWaterWaste" type="text" value=@Model[i].OutputWaterWaste>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@i].AverageWaterSteamTemperature" type="text" value=@Model[i].AverageWaterSteamTemperature>
                                 </td>
                             </tr>
                         }
@@ -114,7 +206,7 @@
 
 
 
-            <script>
+                    <script>
             $(document).ready(function () {
 
             let rowCount = $('table tr').length - 2;
@@ -148,37 +240,82 @@
                 $('tbody').append(`<tr>
 
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].Air_Spend" type="text" value=@Model[Model.Count - 1].Air_Spend>
+                        <input class="form-control" name="[@(Model.Count - 1)].Air_Spend" type="text" value=@Model[Model.Count - 1].Air_Spend>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].Air_Pressure" type="text" value=@Model[Model.Count - 1].Air_Pressure>
+                        <input class="form-control" name="[@(Model.Count - 1)].Air_Pressure" type="text" value=@Model[Model.Count - 1].Air_Pressure>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].Air_Temperature" type="text" value=@Model[Model.Count - 1].Air_Temperature>
+                        <input class="form-control" name="[@(Model.Count - 1)].Air_Temperature" type="text" value=@Model[Model.Count - 1].Air_Temperature>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].Smoke_Temperature" type="text" value=@Model[Model.Count - 1].Smoke_Temperature>
+                        <input class="form-control" name="[@(Model.Count - 1)].Smoke_Temperature" type="text" value=@Model[Model.Count - 1].Smoke_Temperature>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].Viscosity" type="text" value=@Model[Model.Count - 1].Viscosity>
+                        <input class="form-control" name="[@(Model.Count - 1)].Viscosity" type="text" value=@Model[Model.Count - 1].Viscosity>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].Melt_Temperature" type="text" value=@Model[Model.Count - 1].Melt_Temperature>
+                        <input class="form-control" name="[@(Model.Count - 1)].Melt_Temperature" type="text" value=@Model[Model.Count - 1].Smelt_Temperature>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].CO_Percentage" type="text" value=@Model[Model.Count - 1].CO_Percentage>
+                        <input class="form-control" name="[@(Model.Count - 1)].CO_Percentage" type="text" value=@Model[Model.Count - 1].CO_Percentage>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].CO2_Percentage" type="text" value=@Model[Model.Count - 1].CO2_Percentage>
+                        <input class="form-control" name="[@(Model.Count - 1)].CO2_Percentage" type="text" value=@Model[Model.Count - 1].CO2_Percentage>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].N2_Percentage" type="text" value=@Model[Model.Count - 1].N2_Percentage>
+                        <input class="form-control" name="[@(Model.Count - 1)].N2_Percentage" type="text" value=@Model[Model.Count - 1].N2_Percentage>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].O2_Percentage" type="text" value=@Model[Model.Count - 1].O2_Percentage>
+                        <input class="form-control" name="[@(Model.Count - 1)].O2_Percentage" type="text" value=@Model[Model.Count - 1].O2_Percentage>
+                    </td>
+
+                    @* РАСХОД МАТЕРИАЛОВ *@
+
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].Gabbro" type="text" value=@Model[Model.Count - 1].Gabbro>
                     </td>
                     <td>
-                    <input class="form-control" name="[@(Model.Count - 1)].ID" type="text" value=@Model[Model.Count - 1].ID>
+                        <input class="form-control" name="[@(Model.Count - 1)].Limestone" type="text" value=@Model[Model.Count - 1].Limestone>
+                    </td>
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].M_Limestone" type="text" value=@Model[Model.Count - 1].M_Limestone>
+                    </td>
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].Cocks" type="text" value=@Model[Model.Count - 1].Cocks>
+                    </td>
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].Gas" type="text" value=@Model[Model.Count - 1].Gas>
+                    </td>
+
+                    @* СОДЕРЖАНИЕ ОКСИДОЕ *@
+
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].SiO2" type="text" value=@Model[Model.Count - 1].SiO2>
+                    </td>
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].Al2O3" type="text" value=@Model[Model.Count - 1].Al2O3>
+                    </td>
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].CaO" type="text" value=@Model[Model.Count - 1].CaO>
+                    </td>
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].MgO" type="text" value=@Model[Model.Count - 1].MgO>
+                    </td>
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].FeO" type="text" value=@Model[Model.Count - 1].FeO>
+                    </td>
+
+                    @* ПАРАМЕТРЫ ОХЛАЖДАЮЩЕЙ ВОДЫ *@
+
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].InputWaterWaste" type="text" value=@Model[Model.Count - 1].InputWaterWaste>
+                    </td>
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].OutputWaterWaste" type="text" value=@Model[Model.Count - 1].OutputWaterWaste>
+                    </td>
+                    <td>
+                        <input class="form-control" name="[@(Model.Count - 1)].AverageWaterSteamTemperature" type="text" value=@Model[Model.Count - 1].AverageWaterSteamTemperature>
                     </td>
 
                 </tr>`);
