--- a/ImpactCalculateWebApplication/Views/Home/Index.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Index.cshtml
@@ -115,10 +115,14 @@
 
 
                     @{
-                        <td rowspan="13">1</td>
 
                         for (int i = 0; i < @Model.Count; i++)
                         {
+                            if (i % 12 == 0)
+                            {
+                                <td rowspan="13">@(i/12+1)</td>
+                            }
+
                             <tr>
 
                                 <td>
