--- a/ImpactCalculateWebApplication/Views/Home/Index.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Index.cshtml
@@ -141,7 +141,7 @@
                                     <input class="form-control" name="[@i].Viscosity" type="text" value=@Model[i].Viscosity>
                                 </td>
                                 <td>
-                                    <input class="form-control" name="[@i].Melt_Temperature" type="text" value=@Model[i].Smelt_Temperature>
+                                    <input class="form-control" name="[@i].Smelt_Temperature" type="text" value=@Model[i].Smelt_Temperature>
                                 </td>
                                 <td>
                                     <input class="form-control" name="[@i].CO_Percentage" type="text" value=@Model[i].CO_Percentage>
@@ -259,7 +259,7 @@
                         <input class="form-control" name="[@(Model.Count - 1)].Viscosity" type="text" value=@Model[Model.Count - 1].Viscosity>
                     </td>
                     <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Melt_Temperature" type="text" value=@Model[Model.Count - 1].Smelt_Temperature>
+                        <input class="form-control" name="[@(Model.Count - 1)].Smelt_Temperature" type="text" value=@Model[Model.Count - 1].Smelt_Temperature>
                     </td>
                     <td>
                         <input class="form-control" name="[@(Model.Count - 1)].CO_Percentage" type="text" value=@Model[Model.Count - 1].CO_Percentage>
